# async_actors

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/actor1/: Cargo.toml  actor1.did
src/actor1/src/: lib.rs
src/actor2/: Cargo.toml  actor2.did
src/actor2/src/: lib.rs
src/async_actors/: Cargo.toml
src/async_actors_assets/src/: index.html  index.js
